--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       font-size: 0.75rem;
       margin-top: 0.25rem;
     }
-    @media (max-width: 500px) {
+    @media (max-width: 640px) {
       #resultTable th, #resultTable td {
         font-size: 0.75rem;
         padding: 0.5rem;
@@ -101,7 +101,7 @@
               <th class="border p-2 text-gray-700 text-xs sm:text-sm">Size</th>
               <th class="border p-2 text-gray-700 text-xs sm:text-sm">Weight (g)</th>
               <th class="border p-2 text-gray-700 text-xs sm:text-sm">Quantity</th>
-              <th class="border p-2 text-gray-700 text-xs sm:text-sm">Action</th>
+              <th class="border p-2 text-gray-700 text-xs sm:text-sm">X</th>
             </tr>
           </thead>
           <tbody id="tableBody"></tbody>
