--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
       </div>
       <div class="mt-4">
-        <label class="block text-gray-700 text-sm">Quantity (Packages):</label>
+        <label class="block text-gray-700 text-sm">✅Quantity (ចំនួនកញ្ចប់):</label>
         <input type="number" id="quantityInput" class="w-full p-2 border-2 border-gray-200 rounded-xl bg-white text-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-400 text-sm" required>
         <p id="quantityFeedback" class="error-message">Please enter a quantity!</p>
       </div>
