--- a/index.html
+++ b/index.html
@@ -3,46 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Size Selection Tool</title>
+  <title>Start Using - Size Selection Tool</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body {
-      background: linear-gradient(135deg, #f3f4f6, #e5e7eb);
-    }
-    .error-message {
-      display: none;
-      color: #dc2626;
-      font-size: 0.75rem;
-      margin-top: 0.25rem;
-    }
-    #loginOverlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.8);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+ 
 </head>
 <body class="bg-gradient-to-br from-gray-100 to-gray-200 p-4 text-gray-800">
   <div id="loginOverlay">
     <div class="bg-white p-6 rounded-2xl shadow-lg border-2 border-gray-300 max-w-md w-full">
-      <h1 class="text-2xl font-bold mb-6 text-center text-gray-700">Login</h1>
-      <div class="mb-4">
-        <label class="block text-gray-700 text-sm mb-2">Username:</label>
-        <input type="text" id="usernameInput" class="w-full p-2 border-2 border-gray-200 rounded-xl bg-white text-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-400 text-sm">
-      </div>
-      <div class="mb-4">
-        <label class="block text-gray-700 text-sm mb-2">Password:</label>
-        <input type="password" id="passwordInput" class="w-full p-2 border-2 border-gray-200 rounded-xl bg-white text-gray-700 focus:outline-none focus:ring-2 focus:ring-indigo-400 text-sm">
-      </div>
-      <button id="loginButton" class="w-full bg-gradient-to-r from-indigo-400 to-blue-500 text-white px-4 py-2 rounded-xl hover:from-indigo-500 hover:to-blue-600 transition duration-300 text-sm">Login</button>
-      <p id="loginFeedback" class="error-message text-center mt-2">Invalid username or password!</p>
+      <h1 class="text-2xl font-bold mb-6 text-center text-gray-700">ដំណើរការកម្មវិធី</h1>
+      <button id="startButton" class="w-full bg-gradient-to-r from-indigo-400 to-blue-500 text-white px-4 py-2 rounded-xl hover:from-indigo-500 hover:to-blue-600 transition duration-300 text-sm">ចូលប្រើប្រាស់</button>
     </div>
   </div>
 
@@ -52,20 +22,12 @@
       window.location.href = 'meta.html';
     }
 
-    document.getElementById('loginButton').addEventListener('click', () => {
-      const username = document.getElementById('usernameInput').value.trim();
-      const password = document.getElementById('passwordInput').value.trim();
-      const feedback = document.getElementById('loginFeedback');
-
-      if (username === 'THARY' && password === '2025') {
-        // Generate a simple session token
-        const sessionToken = btoa(Date.now().toString() + ':THARY');
-        localStorage.setItem('loggedIn', 'true');
-        localStorage.setItem('sessionToken', sessionToken);
-        window.location.href = 'meta.html';
-      } else {
-        feedback.style.display = 'block';
-      }
+    document.getElementById('startButton').addEventListener('click', () => {
+      // Generate a simple session token
+      const sessionToken = btoa(Date.now().toString() + ':user');
+      localStorage.setItem('loggedIn', 'true');
+      localStorage.setItem('sessionToken', sessionToken);
+      window.location.href = 'meta.html';
     });
   </script>
 </body>
